<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<SearchView
    android:id="@+id/svSearchCity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

</SearchView>

<RadioGroup
    android:id="@+id/rbgFilters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center" >

    <RadioButton
        android:id="@+id/rbTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/temperature" />

    <RadioButton
        android:id="@+id/rbRainProb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/precipitation" />

    <RadioButton
        android:id="@+id/rbCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/condition" />
</RadioGroup>

<ListView
    android:id="@+id/lvCities"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>