<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".A2MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/tCurrentWeather"
            layout="@layout/general_time_detail_table" />

        <TextView
            android:id="@+id/tvNextDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/next_4_days"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusOneMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusOneMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDayPlusOneMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusOneMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusTwoMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusTwoMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDayPlusTwoMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusTwoMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusThreeMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusThreeMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDayPlusThreeMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusThreeMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusFourMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusFourMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDayPlusFourMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusFourMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCititesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="List of Cities" />

            <Button
                android:id="@+id/btnFavCitites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="Favourite Cities" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>