<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_bg">

    <TextView
        android:id="@+id/tvNextDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/next_4_days"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusOneMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusOneMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusOneMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusOneMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusTwoMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusTwoMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusTwoMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusTwoMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusThreeMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusThreeMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusThreeMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusThreeMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayPlusFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusFourMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusFourMinValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDayPlusFourMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDayPlusFourMaxValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>